# songbook

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
songs/: Space Oddity.chordpro  Wonderwall.chordpro
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  songbook.sqlite3  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/application/: dto.rs  mod.rs  song_service.rs
src-tauri/core/src/domain/: chordpro.rs  mod.rs  song.rs  sync.rs  transpose.rs
src-tauri/core/src/infrastructure/: cifraclub_importer.rs  file_song_repository.rs  mod.rs  sqlite_index.rs  sync.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ui/: commands.rs
