[package]
name = "songbook-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ego-tree = "0.10.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.24.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
